fixed word wrap bug

--- a/css/default.css
+++ b/css/default.css
@@ -183,26 +183,24 @@ td, th {
 }
 
 .page {
-    width: 90%;
+    width: 93%;
     max-width: 700px;
     min-height: 80vh;
 
     background-color: white;
 
-    margin: 20px auto;
+    margin: 15px auto;
     box-sizing: border-box;
-    padding: 20px 70px 50px 70px;
+    padding: 5px 15px 15px 15px;
 
     border-radius: 0px;
     box-shadow: 0px 0px 20px #888888;
 }
 
-@media (max-width: 600px) {
+@media (min-width: 600px) {
     .page {
-        width: 100%;
-        margin: 0;
         box-sizing: border-box;
-        padding: 4%;
+        padding: 20px 70px 50px 70px;
     }
 }
 
